# book-rag

./: .env.example  .gitignore  Dockerfile  LESSON.md  README.md  api.py  docker-compose.yml  main.py  pyproject.toml  query.py  requirements.txt  web.py
.github/workflows/: deploy-cloudrun.yml  deploy-streamlit.yml
.streamlit/: secrets.toml.example
deploy/cloudrun-gemini/: Dockerfile  cloudbuild.yaml  start.sh
deploy/cloudrun-ollama/: Dockerfile  start.sh
src/: __init__.py  config.py  db.py  embeddings.py  llm.py  rag.py
